# WealthMachine_project.

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
config/: database.yaml  graph.yaml  market_intelligence.yaml  ontology-schema.yaml  success_metrics.yaml
scripts/: backup.sh
src/: celery_app.py  main.py  monitoring.py
src/agents/: __init__.py  base.py  compliance.py  data_processing.py  financial.py  growth.py  market_intelligence.py  meta_agent.py  reinforcement_agent.py
src/core/: bias_audit.py  config.py  database.py  knowledge_graph.py  langchain_graph.py  metrics.py  ontology.py  security.py
src/workflows/: __init__.py  reinforcement_workflow.py  workflow_engine.py
tests/: test_config.py  test_database.py  test_langchain_graph.py  test_metrics.py  test_ontology.py  test_security.py
