[tool.poetry]
name = "wealth_machine"
version = "0.1.0"
description = "AI-driven wealth machine platform"
authors = ["Alfonso Lopez <keyalfonsolopez@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.18.0"
pydantic = "^2.5.0"
aiohttp = "^3.9.0"
fastapi = "^0.110.0"
uvicorn = "^0.22.0"
celery = "^5.3.1"
redis = "^5.0.0"
langchain = "^0.1.0"

sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
prefect = "^2.15"

prometheus-client = "^0.22.1"
langchain-openai = "^0.3.28"
